Segundo commit(correctivo)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 </div>
 <!--linea divisora-->
-<hr class="linea-divisoria">
+<hr class="linea-divisora">
     <!--presentacion -->
     <section id="presentacion"></section>
     <h1>Bienvenido/a a Perfumazos</h1>
